--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
-<%- include("header") %> 
+<%- include("partials/header") %> 
+    <h1>About us</h1>
+    <p><%= aboutContent %></p>
 
 
 
-
-
-<%- include("footer") %>
+<%- include("partials/footer") %>
