--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
-<%- include("header") %> 
+<%- include("partials/header") %> 
+    <h1>Contact us</h1>
+    <p><%= contactContent %></p>
 
 
 
-
-
-<%- include("footer") %>
+<%- include("partials/footer") %>
