--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,18 @@
-<%- include("header") %> 
+<%- include("partials/header") %> 
 
+    <div class="container">
+        <h1>Compose</h1>
+        <form action="/compose" method="post">
+            <div class="form-group">
+                <!-- <label>Title</label> -->
+                <input class="form-control" type="text" name="postTitle" placeholder="Leave a title here">
+                <!-- <label>Post</label> -->
+                <textarea class="form-control" name="postBody" placeholder="Leave a post here" rows="10" cols="30"></textarea>
+                
+            </div>
+            <button type="submit" class="btn btn-primary">Publish</button>
+        </form>
 
+    </div>
 
-
-
-<%- include("footer") %>
+<%- include("partials/footer") %>
