--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,9 @@
     <h1>Home</h1>
     <p><%= homeParagraph %> </p>
 
-    <% posts.forEach(function (post) { %>
+    <% posts.forEach((post) => { %>
         <h1><%= post.title %></h1>
-        <p><%= `${post.content.slice(0, 100)}... ` %> <a href="posts/<%= post.title %>" style="font-size: 20px;">↝</a></p>
+        <p><%= `${post.content.slice(0, 100)}... ` %> <a href="posts/<%= post._id %>" style="font-size: 20px;">↝</a></p>
     <% }); %> 
 
 <%- include("partials/footer") %>
