--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header") %>
     <h1><%= postTitle %></h1>
-    <p><%= postContent %></p>
+    <p class="post-content"><%= postContent %></p>
 
 <%- include("partials/footer") %> 
